--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,3 +8,18 @@ video {
   height: auto;
   transform: translate(-50%, -50%);
 }
+
+.content {
+  position: relative;
+  top: 30%;
+  z-index: 2;
+  margin: 0 auto;
+  max-width: 720px;
+  text-align: center;
+}
+
+.content__heading {
+  margin-bottom: 24px;
+  color: rgb(255, 153, 102);
+  font-size: 44px;
+}
