Remove looping video Remove React to conversion to Angular

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -21,5 +21,8 @@ video {
 .content__heading {
   margin-bottom: 24px;
   color: rgb(255, 153, 102);
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
   font-size: 44px;
+  text-align: left;
 }
